--- a/index.htm
+++ b/index.htm
@@ -1,45 +1,33 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>ExampleContract Interface</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DividendPool Contract</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>ExampleContract Interface</h1>
-    <div>
+    <h1>DividendPool Contract</h1>
+    <div class="form">
       <h2>Deposit</h2>
-      <label for="deposit-amount">Amount:</label>
-      <input type="text" id="deposit-amount" /><br />
-      <button id="deposit-button">Deposit</button>
-      <p id="deposit-message"></p>
+      <label for="amount">Amount:</label>
+      <input type="number" id="amount" />
+      <button onclick="deposit()">Deposit</button>
     </div>
-    <div>
-      <h2>Distribute Dividend</h2>
-      <button id="dividend-button">Distribute Dividend</button>
-      <p id="dividend-message"></p>
+    <div class="form">
+      <h2>Withdraw</h2>
+      <p>Invested: <span id="invested"></span></p>
+      <p>Withdrawn: <span id="withdrawn"></span></p>
+      <button onclick="withdraw()">Withdraw</button>
     </div>
-    <div>
-      <h2>Buy Lottery Ticket</h2>
-      <label for="ticket-price">Price:</label>
-      <input type="text" id="ticket-price" /><br />
-      <button id="ticket-button">Buy Ticket</button>
-      <p id="ticket-message"></p>
+    <div class="info">
+      <h2>Pool Information</h2>
+      <p>Balance: <span id="pool-balance"></span></p>
+      <p>Dividends per share: <span id="dividends-per-share"></span></p>
+      <p>Prize pool: <span id="prize-pool"></span></p>
+      <p>Last prize distribution: <span id="last-prize-timestamp"></span></p>
+      <p>Total shares: <span id="total-shares"></span></p>
     </div>
-    <div>
-      <h2>Pick Lottery Winners</h2>
-      <button id="winner-button">Pick Winners</button>
-      <p id="winner-message"></p>
-    </div>
-    <div>
-      <h2>Get User Deposits</h2>
-      <label for="user-address">Address:</label>
-      <input type="text" id="user-address" /><br />
-      <button id="user-button">Get Deposits</button>
-      <p id="user-message"></p>
-      <ul id="deposit-list"></ul>
-    </div>
-    <script src="web3.min.js"></script>
-    <script src="example_contract.js"></script>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
