--- a/index.htm
+++ b/index.htm
@@ -54,6 +54,25 @@
             <div id="user-balance"></div>
         </div>
     </main>
+<h2>Statistics</h2>
+<div class="statistics-container">
+    <div class="statistic">
+        <div class="statistic-label">Total pool balance:</div>
+        <div id="total-pool-balance" class="statistic-value"></div>
+    </div>
+    <div class="statistic">
+        <div class="statistic-label">Your balance:</div>
+        <div id="user-balance" class="statistic-value"></div>
+    </div>
+    <div class="statistic">
+        <div class="statistic-label">Your ranking:</div>
+        <div id="user-ranking" class="statistic-value"></div>
+    </div>
+    <div class="statistic">
+        <div class="statistic-label">Ranking reward:</div>
+        <div id="ranking-reward" class="statistic-value"></div>
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
