--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
     <header>
         <h1>Smart Contract</h1>
     </header>
-
+<button id="connect-wallet-button">Connect Wallet</button>
     <main>
         <div class="container">
             <h2>Deposit</h2>
