--- a/index.htm
+++ b/index.htm
@@ -2,26 +2,41 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>MaticTreasury</title>
-    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+    <title>Matic Treasury</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>MaticTreasury</h1>
-    <p>Current Treasury Balance: <span id="treasuryBalance"></span> MATIC</p>
-    <p>Current User Balance: <span id="userBalance"></span> MATIC</p>
-    <form id="depositForm">
-      <h2>Deposit</h2>
-      <label for="depositAmount">Amount:</label>
-      <input type="number" id="depositAmount" name="depositAmount" required min="1" max="100000" step="1" />
-      <button type="submit">Deposit</button>
-    </form>
-    <form id="withdrawForm">
-      <h2>Withdraw</h2>
-      <label for="withdrawAmount">Amount:</label>
-      <input type="number" id="withdrawAmount" name="withdrawAmount" required min="1" step="1" />
-      <button type="submit">Withdraw</button>
-    </form>
-    <button id="claimRewardButton">Claim Reward</button>
+    <div class="container">
+      <h1>Matic Treasury</h1>
+      <div class="balance-container">
+        <div class="balance">
+          <h3>Tesoro:</h3>
+          <p id="treasuryBalance">...</p>
+        </div>
+        <div class="balance">
+          <h3>Tu saldo:</h3>
+          <p id="userBalance">...</p>
+        </div>
+        <button id="claimRewardButton">Reclamar recompensa</button>
+      </div>
+      <form id="depositForm">
+        <h2>Depositar</h2>
+        <div class="form-group">
+          <label for="depositAmount">Cantidad:</label>
+          <input type="number" step="any" name="depositAmount" required />
+        </div>
+        <button type="submit">Depositar</button>
+      </form>
+      <form id="withdrawForm">
+        <h2>Retirar</h2>
+        <div class="form-group">
+          <label for="withdrawAmount">Cantidad:</label>
+          <input type="number" step="any" name="withdrawAmount" required />
+        </div>
+        <button type="submit">Retirar</button>
+      </form>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
