--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
         <h1 class="header__title">Matic Treasury</h1>
       </div>
     </div>
+<button id="connect-metamask-button" class="button button--primary">Conectar con MetaMask</button>
 
     <div class="main">
       <div class="container">
