--- a/index.htm
+++ b/index.htm
@@ -134,3 +134,20 @@
     <script src="./app.js"></script>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Mi DApp con MetaMask</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <h1>Mi DApp con MetaMask</h1>
+    <p>Conecta tu billetera de MetaMask para usar esta DApp.</p>
+    <button id="connect-metamask-button" class="button button--primary">Conectar con MetaMask</button>
+    <script src="https://cdn.jsdelivr.net/npm/web3@1.3.0/dist/web3.min.js"></script>
+    <script src="app.js"></script>
+  </body>
+</html>
+
