--- a/index.htm
+++ b/index.htm
@@ -9,146 +9,110 @@
     <h1>Mi DApp con MetaMask</h1>
     <p>Conecta tu billetera de MetaMask para usar esta DApp.</p>
     <button id="connect-metamask-button" class="button button--primary">Conectar con MetaMask</button>
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.3.0/dist/web3.min.js"></script>
-    <script src="app.js"></script>
-  </body>
-</html>
 
-
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matic Treasury</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <h1 class="header__title">Matic Treasury</h1>
-      </div>
-    </div>
-
-    <div class="main">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="balance-card">
-              <div class="balance-card__header">
-                <h2 class="balance-card__title">Total Deposits</h2>
-                <span class="balance-card__subtitle">Your balance:</span>
-                <span class="balance-card__balance" id="balance">0</span>
-                <span class="balance-card__currency">MATIC</span>
-              </div>
-              <div class="balance-card__body">
-                <span class="balance-card__subtitle">Available to Withdraw:</span>
-                <span class="balance-card__balance" id="available-to-withdraw">0</span>
-                <span class="balance-card__currency">MATIC</span>
-              </div>
-              <div class="balance-card__footer">
-                <span class="balance-card__subtitle">Dividends:</span>
-                <span class="balance-card__balance" id="dividends">0</span>
-                <span class="balance-card__currency">MATIC</span>
-              </div>
-            </div>
-          </div>
+    <div class="container">
+      <h2>Balance</h2>
+      <div class="balance">
+        <div class="balance__item">
+          <div class="balance__label">Total depositado:</div>
+          <div class="balance__value" id="total-depositado">0</div>
+          <div class="balance__currency">MATIC</div>
         </div>
-
-        <div class="row">
-          <div class="col">
-            <form class="form">
-              <h2 class="form__title">Deposit</h2>
-              <div class="form__group">
-                <label for="amount" class="form__label"
-                  >Amount (1 MATIC minimum)</label
-                >
-                <div class="form__control-group">
-                  <input
-                    type="number"
-                    id="amount"
-                    class="form__control"
-                    min="1"
-                    step="1"
-                    required
-                  />
-                  <span class="form__currency">MATIC</span>
-                </div>
-              </div>
-              <button class="button button--primary form__button">
-                Deposit
-              </button>
-              <p class="form__error-message" id="deposit-error"></p>
-            </form>
-          </div>
-
-          <div class="col">
-            <form class="form">
-              <h2 class="form__title">Withdraw</h2>
-              <div class="form__group">
-                <label for="amount" class="form__label"
-                  >Amount (in MATIC)</label
-                >
-                <div class="form__control-group">
-                  <input
-                    type="number"
-                    id="amount"
-                    class="form__control"
-                    min="0"
-                    step="1"
-                    required
-                  />
-                  <span class="form__currency">MATIC</span>
-                </div>
-              </div>
-              <button class="button button--primary form__button">
-                Withdraw
-              </button>
-              <p class="form__error-message" id="withdraw-error"></p>
-            </form>
-          </div>
+        <div class="balance__item">
+          <div class="balance__label">Dividendos acumulados:</div>
+          <div class="balance__value" id="dividendos-acumulados">0</div>
+          <div class="balance__currency">MATIC</div>
         </div>
-        <div class="row">
-          <div class="col">
-            <form class="form">
-              <h2 class="form__title">Claim Dividends</h2>
-              <div class="form__group">
-                <span class="form__subtitle"
-                  >Your dividends available to claim:</span
-                >
-                <span class="form__control" id="dividends-to-claim">0</span>
-                <span class="form__currency">MATIC</span>
-              </div>
-              <button class="button button--primary form__button">
-                Claim Dividends
-              </button>
-            </form>
-          </div>
-
-          <div class="col">
-            <h2 class="leaderboard__title">Leaderboard</h2>
-            <table class="leaderboard__table">
-              <thead>
-                <tr>
-                  <th>Address</th>
-                  <th>Balance</th>
-                  <th>Dividends</th>
-                </tr>
-              </thead>
-              <tbody id="leaderboard-body">
-                <tr>
-                  <td colspan="3">No users to display</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="balance__item">
+          <div class="balance__label">Dividendos disponibles:</div>
+          <div class="balance__value" id="dividendos-disponibles">0</div>
+          <div class="balance__currency">MATIC</div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./app.js"></script>
-  </body>
-</html>
+    <div class="container">
+      <h2>Depositar</h2>
+      <form class="form" id="deposit-form">
+        <div class="form__group">
+          <label class="form__label" for="deposit-amount">Cantidad a depositar:</label>
+          <div class="form__input-group">
+            <input class="form__input" type="number" id="deposit-amount" min="1" max="100000" step="1" required>
+            <span class="form__currency">MATIC</span>
+          </div>
+        </div>
+        <button class="button button--primary form__button">Depositar</button>
+      </form>
+    </div>
 
+    <div class="container">
+      <h2>Retirar</h2>
+      <form class="form" id="withdraw-form">
+        <div class="form__group">
+          <label class="form__label" for="withdraw-amount">Cantidad a retirar:</label>
+          <div class="form__input-group">
+            <input class="form__input" type="number" id="withdraw-amount" min="1" max="100000" step="1" required>
+            <span class="form__currency">MATIC</span>
+          </div>
+        </div>
+        <button class="button button--primary form__button">Retirar</button>
+      </form>
+    </div>
+    <div class="container">
+      <h2>Reclamar dividendos</h2>
+      <form class="form" id="claim-form">
+        <button class="button button--primary form__button">Reclamar</button>
+      </form>
+    </div>
+
+    <div class="container">
+      <h2>Información del contrato</h2>
+      <div class="info">
+        <div class="info__item">
+          <div class="info__label">Balance de la tesorería:</div>
+          <div class="info__value" id="balance-tesoreria">0</div>
+          <div class="info__currency">MATIC</div>
+        </div>
+        <div class="info__item">
+          <div class="info__label">Balance del creador:</div>
+          <div class="info__value" id="balance-creador">0</div>
+          <div class="info__currency">MATIC</div>
+        </div>
+        <div class="info__item">
+          <div class="info__label">Depósito mínimo:</div>
+          <div class="info__value" id="deposito-minimo">1</div>
+          <div class="info__currency">MATIC</div>
+        </div>
+        <div class="info__item">
+          <div class="info__label">Depósito máximo:</div>
+          <div class="info__value" id="deposito-maximo">100000</div>
+          <div class="info__currency">MATIC</div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2>Modificar los límites de depósito</h2>
+      <form class="form" id="limits-form">
+        <div class="form__item">
+          <label for="min-deposit-input" class="form__label">Depósito mínimo:</label>
+          <div class="form__field">
+            <input type="number" id="min-deposit-input" class="form__input" step="1" min="1" max="999999" required>
+            <span class="form__currency">MATIC</span>
+          </div>
+        </div>
+        <div class="form__item">
+          <label for="max-deposit-input" class="form__label">Depósito máximo:</label>
+          <div class="form__field">
+            <input type="number" id="max-deposit-input" class="form__input" step="1" min="1" max="999999" required>
+            <span class="form__currency">MATIC</span>
+          </div>
+        </div>
+        <button class="button button--primary form__button">Modificar</button>
+      </form>
+    </div>
+  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.4.0/web3.min.js" integrity="sha512-7DtrS2ikBLj9tTc3qTlGt4uCr4EhJIVUV0+YvyGVAV7otuzikSjJt9cLqT3TtTJ16e0PR+Bb7CQY20+HQ1gC0g==" crossorigin="anonymous"></script>
+  <script src="app.js"></script>
+
+</html>
